[package]
edition = "2021"
version = "0.1.0"
name = "rust-titan"
authors = ["Sunny Bains <sunny.bains@pingcap.com>"]

[lib]
name = "rust_titan"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
rocksdb = { path = "../../.." }

[dependencies.cxx]
version = "1"
cxx-build = "1"
features = ["c++20"]

[build-dependencies]
cc = "1.0.3"
cmake = "0.1"
cxx-build = "1"
pkg-config = "0.3"

[dependencies.snappy-sys]
git = "https://github.com/busyjay/rust-snappy.git"
branch = "static-link"
